dark mode fixes

--- a/project/style.css
+++ b/project/style.css
@@ -16,18 +16,21 @@ main {
 }
 
 #night {
+    position: absolute;
+    right: 0px;
+    top: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 10px;
     background-color: #333;
     font-weight: bold;
     color: #f3f3f3;
-    height: 28px;
-	font-size: 16px;
-	line-height: 16px;
-    width: 28px;
-	cursor: pointer;
+    height: 36px;
+	font-size: 21px;
+	line-height: 21px;
+    width: 36px;
+    cursor: pointer;
 }
 
 #p-overlay {
@@ -197,10 +200,9 @@ main {
 	}
 
 	#night {
-		width: 20px;
-		height: 20px;
-		border-radius: 5px;
-		font-size: 12px;
-		line-height: 12px;
+		width: 30px;
+		height: 30px;
+		font-size: 16px;
+		line-height: 16px;
 	}
 }
